# roadrunner-rs

./: .gitignore  .rr-config.json  .rr-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  psr-worker.php
.cargo/: config.toml
crates/core/: Cargo.toml
crates/goridge/: Cargo.toml
crates/goridge/src/: bit_operations.rs  errors.rs  lib.rs  pipe.rs  prefix.rs  relay.rs
crates/goridge/src/frame/: mod.rs
crates/goridge/src/pipe/: mod.rs
crates/goridge/tests/: client.php  composer.json  go.mod  go.sum
crates/http/src/: lib.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: lib.rs  plugin.rs
crates/plugins/src/trait/: mod.rs
crates/rr-core/: Cargo.toml
crates/rr-core/src/: state.rs  worker.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: errors.rs  main.rs  payload.rs  state.rs  worker.rs
goridge/: Cargo.toml
goridge/src/: errors.rs  lib.rs  pipe.rs  prefix.rs
goridge/test/: hello.php
roadrunner/: Cargo.toml
src/: errors.rs  main.rs  state.rs  worker.rs
tests/: worker.php
