[package]
name = "roadrunner-rs"
version = "0.1.0"
authors = ["Valery Piashchynski <piashchynski_valery@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
futures = "0.3"
structopt = "0.3"
chrono = "0.4.19"
goridge-rs = { path = "../goridge", version = "0.1.0" }
