[package]
name = "roadrunner-rs"
version = "0.1.0"
authors = ["Valery Piashchynski <piashchynski_valery@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3"
futures = "0.3"
structopt = "0.3"
chrono = "0.4"
log = "0.4"
env_logger = "0.9"
goridge-rs = { path = "../goridge", version = "0.1.0" }
http = {path = "../http", version = "0.1.0"}
