[package]
name = "sdk"
version = "0.1.0"
authors = ["Valery Piashchynski <piashchynski_valery@hotmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = "4"
futures = "0.3"
structopt = "0.3"
chrono = "0.4"
log = "0.4"
env_logger = "0"
goridge-rs = { path = "../../../../spiral/goridge-rs", version = "0.1.0" }
anyhow = "1.0.99"
