[package]
name = "sdk"
version = "0.1.0"
authors = ["Valery Piashchynski <piashchynski_valery@hotmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
futures = "0.3"
structopt = "0.3"
chrono = "0.4"
goridge-rs = { path = "../../../../spiral/goridge-rs", version = "0.1.0" }
